// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GSwitch should match snapshot when handleChange fired 1`] = `
<label
  class="g-switch"
>
  <input
    type="checkbox"
  />
   
  <span
    class="-medium"
  />
</label>
`;

exports[`GSwitch should match snapshot when size small 1`] = `
<label
  class="g-switch"
>
  <input
    type="checkbox"
  />
   
  <span
    class="-small"
  />
</label>
`;

exports[`GSwitch should match snapshot with default 1`] = `
<label
  class="g-switch"
>
  <input
    type="checkbox"
  />
   
  <span
    class="-big"
  />
</label>
`;
